--- a/scripts/thorpe_scales/Thorpe_scales_in_depth.ipynb
+++ b/scripts/thorpe_scales/Thorpe_scales_in_depth.ipynb
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 174,
    "id": "c4757811-77ba-41d9-8398-ace3902411cd",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1201,8 @@
     "cb.set_label(r\"Dissipation rate $\\varepsilon_{\\mathrm{total, Thorpe}}\\,$(W$\\,$kg$^{-1}$)\")\n",
     "draw_water_mass_boundaries(ax)\n",
     "ax.set_xlabel(\"Longitude (°)\")\n",
-    "ax.set_ylabel(\"Meters above Seafloor\");"
+    "ax.set_ylabel(\"Meters above Seafloor\");\n",
+    "#fig.savefig(\"./ppt.png\", dpi = 300)"
    ]
   },
   {
